# TaskBridge

./: .gitignore  CONTRIBUTING.md  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  package.json
backend/: .dockerignore  .env.docker.example  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0001_initial.py  20260517_0002_extend_sync_logs.py  20260518_0003_task_productivity_fields.py  20260518_0004_task_query_indexes.py  20260518_0005_sync_idempotency_indexes.py  20260523_0006_security_hardening.py  20260524_0007_maintenance_cleanup_indexes.py  20260528_0008_sync_log_idempotency_unique.py  20260528_0009_drop_redundant_sync_log_idempotency_index.py  20260529_0010_task_filter_indexes.py  (+3 more)
backend/app/: __init__.py  main.py
backend/docs/: sync-examples.md
backend/tests/: conftest.py  test_auth.py  test_client_error_reporting.py  test_create_user_tool.py  test_cross_client_sync_smoke.py  test_devices.py  test_health.py  test_maintenance.py  test_migrations.py  test_observability.py  test_openapi_contract.py  test_product_analytics.py  test_rate_limit.py  test_reset_password_tool.py  test_security.py  test_sync.py  test_task_advanced_workflows.py  test_task_bulk_import_conflict.py  test_task_productivity_features.py  test_task_timeline_fixtures.py  test_task_views_export_repeat.py  test_tasks.py  test_websocket_sync.py
backend/tools/: __init__.py  create_user.py  openapi_contract.py  reset_password.py
(+352 files in other folders)
