[project]
name = "taskbridge"
version = "0.1.6"
description = "FastAPI backend for TaskBridge"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "fastapi>=0.115,<1.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "pyjwt>=2.9,<3.0",
    "pymysql>=1.1,<2.0",
    "python-dotenv>=1.0,<2.0",
    "redis>=5.1,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.7,<1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
